appId: com.apple.mobilecal
---
- assertVisible: "No passes available"
- tapOn:
    text: "Open Still to get a pass"
    waitToSettleTimeoutMs: 100
- extendedWaitUntil:
    visible: "Still is ready to recharge"
    timeout: 10000
- tapOn: "Still is ready to recharge"
- extendedWaitUntil:
    visible: "Test mode"
    timeout: 30000
- takeScreenshot: still-recharge-ad
